# Radial2DT

./: CMakeLists.txt  README.md  Trajectory2D.h  cpuRadialCGSENSEGadget.cpp  cpuRadialCGSENSEGadget.h  cpuRadialNUFFTGadget.cpp  cpuRadialNUFFTGadget.h  gadgetron_cpuradial_export.h  gpuRadialCGSENSEGadget.cpp  gpuRadialCGSENSEGadget.h  gpuRadialNUFFTGadget.cpp  gpuRadialNUFFTGadget.h
